--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
+    "@metaplex/js": "^4.12.0",
     "@mui/icons-material": "^5.0.1",
     "@mui/material": "^5.0.2",
     "@nfteyez/sol-rayz": "^0.8.0",
